--- a/crates/amicis_cli/Cargo.toml
+++ b/crates/amicis_cli/Cargo.toml
@@ -7,4 +7,5 @@ edition = "2021"
 
 [dependencies]
 amicis_core.workspace = true
+json_api.workspace = true
 clap = { workspace = true, features = ["derive"] }
